<resources>
    <string name="app_name">Reviewer</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="example">Example</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="auth_screen_image">Authorization screen image</string>
    <string name="password">Password</string>
    <string name="pwd_filler">··········</string>
    <string name="account_hint">Don\'t have an account?</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="email">Email</string>
    <string name="example_mail">Example@mail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>