<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authorization.Registration">

    <ImageView
        android:id="@+id/auth_imageView_signup"
        android:layout_width="224dp"
        android:layout_height="202dp"
        android:contentDescription="@string/auth_screen_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/sign_up"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/auth_imageView_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_sign_up_to_continue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/login_textview"
        app:layout_constraintTop_toBottomOf="@+id/login_textview" />

    <EditText
        android:id="@+id/login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey_main"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/example"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_desc_upper_hint"
        app:layout_constraintTop_toBottomOf="@+id/login_desc_upper_hint" />

    <TextView
        android:id="@+id/login_desc_upper_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_description_textview" />

    <TextView
        android:id="@+id/email_desc_upper_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey_main"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text="@string/pwd_filler"
        android:textColor="@color/grey_text"
        app:layout_constraintStart_toStartOf="@+id/password_desc_upper_hint"
        app:layout_constraintTop_toBottomOf="@+id/password_desc_upper_hint" />

    <TextView
        android:id="@+id/password_desc_upper_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edittext" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_main"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text="@string/example_mail"
        android:textColor="@color/grey_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="@+id/email_desc_upper_hint"
        app:layout_constraintTop_toBottomOf="@+id/email_desc_upper_hint" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_main"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>